Fix #524 (Rendering overlaps in grid view not always shown in Firefox)

--- a/annis-gui/src/main/webapp/VAADIN/themes/annis/styles.css
+++ b/annis-gui/src/main/webapp/VAADIN/themes/annis/styles.css
@@ -12393,6 +12393,14 @@ div.v-layout.v-horizontal.v-widget {
 	background-color: #c8c8c8;
 }
 
+.annis .partitur_table tr.invisible_token {
+	visibility: collapse;
+}
+
+.annis .partitur_table tr.invisible_token td {
+	min-width: 10px;
+}
+
 .annis .checkedItem:before {
 	content: url('check.gif');
 }
